# Solitaire

./: CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  HelloWorldScene.cpp
Classes/configs/: CardResConfig.h  LevelConfig.h  LevelConfigLoader.cpp  LevelConfigLoader.h
Classes/controllers/: GameController.cpp  GameController.h
Classes/controllers/commands/: DrawCardCommand.cpp  DrawCardCommand.h  MoveCardCommand.cpp  MoveCardCommand.h
Classes/managers/: ICommand.h  UndoManager.cpp  UndoManager.h
Classes/models/: CardModel.cpp  CardModel.h  GameConstants.h  GameModel.cpp  GameModel.h
Classes/services/: GameModelGenerator.cpp  GameModelGenerator.h  GameRuleService.h
Classes/views/: CardView.cpp  CardView.h  GameView.cpp  GameView.h  LevelSelectScene.cpp  LevelSelectScene.h
Resources/: level_1.json  level_2.json  level_3.json  level_test.json
build_win32/: CMakeCache.txt
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
